# launcher

./: .gitignore  .prettierignore  .prettierrc  .prettierrc.json  LICENSE  README.md  crowdin.yml  index.html  jsconfig.json  main.js  old.vite.config.ts  package-lock.json  package.json  splashscreen.html  style.css  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.ts  webpack.development.js  webpack.production.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml
.github/scripts/download-binaries/: index.js  package-lock.json  package.json
.github/scripts/update-release-metadata/: index.js  package-lock.json  package.json
.github/workflows/: build.yaml  bundle-flatpak.yml  kickoff-release.yaml  lint.yaml  release.yaml  release.yml  test.yaml
.github/workflows/linux/: dev.opengoal.OpenGOAL.desktop  dev.opengoal.OpenGOAL.yaml  dev.opengoal.OpenGOAL.yml
.tauri/: .gitignore  latest-release-v2.json  latest-release.json  release-config.json
app/electron/: main.js  preload.js
app/src/: ColorModeSwitcher.js  index.html  index.jsx
app/src/components/: GettingStarted.js  Header.js  ImportantLinks.js  Landing.js  Settings.js
app/src/constants/: routes.json
app/src/core/: nav.jsx  root.js  routes.jsx
app/src/utils/: gitFetch.js  iso.js  launch.js  utils.js
backup/components/settings/: settings.css  settings.js
components/jak1/: jak1.js
components/settings/: settings.js
fixtures/: mock-mods.json
metadata/: dev.opengoal.OpenGOAL.appdata.xml
resources/: dev.opengoal.OpenGOAL.desktop  icon.icns
resources/data/: links.json
resources/metadata/: dev.opengoal.OpenGOAL.appdata.xml
schemas/: README.md
schemas/mod-source/v1/: mod-source-schema.v1.json  types.ts
schemas/texture-packs/v1/: texture-pack-schema.v1.json  types.ts
scripts/: dummy-binaries.js  get-release-id.mjs  merge-config.js  prepare-sidecars.js  prepare-sidecars.mjs  rename-binaries.js  update-binaries.js  update-release-meta.mjs  verify-release-assets.mjs
src/: App.svelte  app.css  app.html  app.postcss  hooks.client.ts  hooks.js  index.html  index.js  main.ts  old.App.svelte  router.ts
src-frontend/: index.html  index.js
src-frontend/css/: style.css
src-frontend/js/: preload.js
src-frontend/pages/settings/: settings.js
src-tauri/: .gitignore  Cargo.toml  Info.plist  org.opengoal.launcher.yml  rustfmt.toml  tauri.conf.json  tauri.conf.release.json  tauri.linux.conf.json
src-tauri/bindings/: AvailableModsByGame.ts  ModInfo.ts  ModPerGameConfig.ts  ModSourceData.ts  ModVersion.ts
src-tauri/capabilities/: desktop.json  main.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  commands.rs  config.rs  main.rs  textures.rs  util.rs
src-tauri/src/commands/: binaries.rs  cache.rs  config.rs  download.rs  extractor.rs  features.rs  game.rs  logging.rs  mods.rs  support.rs  util.rs  versions.rs  window.rs
src-tauri/src/commands/features/: mods.rs  texture_packs.rs
src-tauri/src/config/: config.rs  mod.rs
src-tauri/src/util/: file.rs  game_milestones.rs  game_tests.rs  network.rs  os.rs  process.rs  tar.rs  zip.rs
src/assets/translations/: af-ZA.json  ar-SA.json  bs-BA.json  ca-ES.json  cs-CZ.json  da-DK.json  de-DE.json  el-GR.json  en-GB.json  en-US.json  english.json  es-ES.json  fi-FI.json  fr-FR.json  gl-ES.json  he-IL.json  hr-HR.json  hu-HU.json  it-IT.json  ja-JP.json  ko-KR.json  lt-LT.json  nl-NL.json  no-NO.json  pl-PL.json  pt-BR.json  pt-PT.json  ro-RO.json  ru-RU.json  sr-SP.json  sv-SE.json  tr-TR.json  uk-UA.json  vi-VN.json  zh-CN.json  zh-TW.json
src/assets/videos/: background-jak2.webm
src/components/: Console.svelte  GameInProgress.svelte  Header.svelte  LocaleSelector.svelte  Logo.svelte  Progress.svelte  SetupError.svelte  Sidebar.svelte  Toast.svelte
src/components/background/: Background.svelte  BackgroundLoading.svelte  background.css
src/components/console/: Console.svelte  console.css
src/components/games/: GameBetaAlert.svelte  GameControls.svelte  GameControlsMod.svelte  GameInProgress.svelte  GameNotSupportedByTooling.svelte  GameToolsNotSet.svelte  Jak1Main.svelte  Playtime.svelte  VCCWarning.svelte
src/components/header/: Header.svelte
src/components/job/: GameSetup.svelte  GameUpdate.svelte  LogViewer.svelte  Progress.svelte  ProgressIcon.svelte  Requirements.svelte
src/components/mods/: Available.svelte  Card.svelte  ExternalCard.svelte  Installed.svelte
src/config/: config.js
src/css/: fonts.css  index.css  style.css
src/html/: index.html  settings.html
src/js/: preload.js  render.js  settings.js
src/layouts/: Layout.svelte  StartupLayout.svelte
src/lib/: commands.js  commands.ts  config.js  config.ts  constants.js  constants.ts  launch.js  launch.ts  setup.js  setup.ts
src/old_components/: GameJob.svelte  ProgressIcon.svelte
src/params/: game.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts  .Game.svelte  Alerts.svelte  FAQ.svelte  Game.svelte  GameFeature.svelte  GameMods.svelte  Help.svelte  Jak1.svelte  Job.svelte  Mods.svelte  Settings.svelte  Startup.svelte  Textures.svelte  Update.svelte  UpdateLauncher.svelte  __layout.svelte  faq.svelte  textures.svelte
src/splash/: DataDirCleanup.svelte  LocaleSelector.svelte  SetInstallDir.svelte  Splash.svelte  index.html  splash.css  splash.d.ts  splash.js  splash.postcss  splash.test.disabled.ts  splash.test.ts  splash.ts
src/state/: ActiveGameState.svelte.ts  SystemInfoState.svelte.ts  VersionState.svelte.ts  config.svelte.ts  requirements-store.ts
src/stores/: AppStore.ts  InstallStore.ts
src/tests/: setup.ts
src/types/: types.d.ts
src/utils/: extract.js  file.js  iso.js  launch.js  setup.js  store.js
src/views/: main.dot.js  sidebar.dot.js
static/translations/: af-ZA.json  ar-SA.json  cs-CZ.json  da-DK.json  el-GR.json  en-GB.json  en-US.json  fr-FR.json  he-IL.json  it-IT.json  lt-LT.json  nl-NL.json  pt-PT.json  ro-RO.json  tr-TR.json  uk-UA.json  zh-CN.json  zh-TW.json
(+220 files in other folders)
