[package]
name = "opengoal-launcher"
version = "2.4.10" # APP_VERSION
description = "A frontend for the OpenGOAL project"
authors = ["OpenGOAL"]
license = "ISC"
repository = "https://github.com/open-goal/launcher"
default-run = "opengoal-launcher"
edition = "2021"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
backtrace = "0.3.74"
chrono = "0.4.38"
dir-diff = "0.3.3"
directories = "5.0.1"
rustc-serialize = "0.3"
fern = { version = "0.6.1", features = ["date-based", "colored"] }
flate2 = "1.0.33"
fs_extra = "1.3.0"
futures-util = "0.3.30"
glob = "0.3.1"
log = "0.4.21"
reqwest = { version = "0.12", features = ["json"] }
rev_buf_reader = "0.3.0"
semver = "1.0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
sysinfo = "0.31.3"
tar = "0.4.41"
tauri = { version = "1.8.0", features = ["api-all", "devtools", "reqwest-client"] }
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }
ts-rs = "9.0"
walkdir = "2.5.0"
wgpu = "22.1.0"
zip = { version = "2.2.0", features = ["deflate-zlib-ng"] }
zip-extract = "0.2.1"
tempfile = "3.12.0"
native-dialog = "0.7.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
