[package]
name = "opengoal-launcher"
version = "2.7.1" # APP_VERSION
description = "A frontend for the OpenGOAL project"
authors = ["OpenGOAL"]
license = "ISC"
repository = "https://github.com/open-goal/launcher"
default-run = "opengoal-launcher"
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
plist = "1.7.1" # ensuring a bug fix for newer rustc versions
notify-rust = "4.11.7" # ensuring a bug fix for newer rustc versions
backtrace = "0.3.74"
chrono = "0.4.39"
dir-diff = "0.3.3"
directories = "6.0.0"
rustc-serialize = "0.3"
fern = { version = "0.7.1", features = ["date-based", "colored"] }
flate2 = "1.0.35"
fs_extra = "1.3.0"
futures-util = "0.3.31"
glob = "0.3.2"
log = "0.4.21"
reqwest = { version = "0.12", features = ["json"] }
rev_buf_reader = "0.3.0"
semver = "1.0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
sysinfo = "0.34.1"
tar = "0.4.43"
tauri = { version = "2.4.0", features = [ "protocol-asset", "devtools"] }
thiserror = "2.0.9"
tokio = { version = "1", features = ["full"] }
ts-rs = "10.1"
walkdir = "2.5.0"
zip = { version = "2.2.2", features = ["deflate-zlib-ng"] }
zip-extract = "0.2.1"
tempfile = "3.14.0"
native-dialog = "0.7.0"
tokio-util = "0.7.13"
tauri-codegen = "2.1.0"
tauri-plugin = "2.1.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-http = "2.2.0"
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-os = "2.2.1"
tauri-plugin-notification = "2.2.0"
tauri-plugin-process = "2.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
sysctl = "0.6.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-updater = "2.2.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
