[package]
name = "opengoal-launcher"
version = "2.8.10" # APP_VERSION
description = "A frontend for the OpenGOAL project"
authors = ["OpenGOAL"]
license = "ISC"
repository = "https://github.com/open-goal/launcher"
default-run = "opengoal-launcher"
edition = "2024"
rust-version = "1.89"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
plist = "1.7.4" # ensuring a bug fix for newer rustc versions
notify-rust = "4.11.6" # ensuring a bug fix for newer rustc versions
cmake = "0.1.57" # VS2026 causes issues
backtrace = "0.3.74"
chrono = "0.4.39"
dir-diff = "0.3.3"
directories = "6.0.0"
rustc-serialize = "0.3"
fern = { version = "0.7.1", features = ["date-based", "colored"] }
flate2 = "1.1.2"
fs_extra = "1.3.0"
futures-util = "0.3.31"
glob = "0.3.3"
log = "0.4.29"
reqwest = { version = "0.12", features = ["json"] }
rev_buf_reader = "0.3.0"
semver = "1.0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.146"
strum = { version = "0.27", features = ["derive"] }
sysinfo = "0.37.0"
tar = "0.4.43"
tauri = { version = "2.9.5", features = [ "protocol-asset", "devtools"] }
thiserror = "2.0.15"
tokio = { version = "1", features = ["full"] }
ts-rs = "11.0"
walkdir = "2.5.0"
zip = { version = "2.2.2", features = ["deflate-zlib-ng"] }
zip-extract = "0.3.0"
tempfile = "3.14.0"
native-dialog = "0.9.4"
tokio-util = "0.7.17"
tauri-codegen = "2.5.0"
tauri-plugin = "2.5.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-shell = "2.3.3"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-http = "2.5.4"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-os = "2.3.2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-opener = "2.5.2"
strum_macros = "0.27.2"

[target.'cfg(target_os = "macos")'.dependencies]
sysctl = "0.7.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-updater = "2.9.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.

[profile.dev.package.zip] # build zip as release, else its slow when making a support package when dev'ing
opt-level = 3
